...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollForEspresso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Каллории (ККАЛ)"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/caloriesTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Каллории"
                    android:inputType="number"
                    android:maxLength="6" />
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Белки (Г)"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/proteinTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Белки"
                    android:inputType="number"
                    android:maxLength="6" />
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Углеводы (Г)"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/carbohydratesTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Углеводы"
                    android:inputType="number"
                    android:maxLength="6" />
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Жиры (Г)"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/fatnessTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Жиры"
                    android:inputType="number"
                    android:maxLength="6" />
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Срок  хранения (Г)"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/shelfLifeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Срок хранения"
                    android:inputType="number"
                    android:maxLength="6" />
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Температура хранения(°C)"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/temperatureEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Температура хранения"
                    android:inputType="number"
                    android:maxLength="6" />
...
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RatingBar
                        android:id="@+id/productRatingBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="1" />

                    <Space
                        android:layout_width="wrap_content"
...
