...
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="Углеводы (Г): "
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editcarbohydrates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="25dp"
                            android:layout_weight="0"
                            android:ems="10"
                            android:hint="Неизвестно"
...
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="Белки (Г): "
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editprotein"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="25dp"
                            android:layout_weight="0"
                            android:ems="10"
                            android:hint="Неизвестно"
...
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="Жирность (Г): "
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editfatness"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="25dp"
                            android:layout_weight="0"
                            android:ems="10"
                            android:hint="Неизвестно"
...
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="Калории (Г): "
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editcalories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="25dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="Неизвестно"
...
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="Срок годности (Дней): "
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editShelf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="25dp"
                            android:layout_weight="0"
                            android:ems="10"
                            android:hint="Неизвестно"
...
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="Температура хранения (°C): "
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="25dp"
                            android:layout_weight="0"
                            android:ems="10"
                            android:hint="Неизвестно"
...
                    android:layout_marginTop="0dp"
                    android:layout_weight="0"
                    android:text="Ваш рейтинг:"
                    android:textSize="24sp" />

                <RatingBar
                    android:id="@+id/Rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1" />
            </LinearLayout>

...
