...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Название продукта"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/productNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="13" />

...
            <Spinner
                android:id="@+id/productCategorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <Button
                android:id="@+id/additionalnfoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Доп. информация о продукте" />

            <TextView
                android:id="@+id/textView2"
...
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/applyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ок" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/cancellButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Отмена" />

            </LinearLayout>

...
