...
        android:layout_weight="1"
        android:text="TextView"
        android:textColor="#020513"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0"
        app:srcCompat="@drawable/delete48" />
</LinearLayout>
